Finalize some local variables in CoreTraversalTest.